--- a/.travis.yml
+++ b/.travis.yml
@@ -169,7 +169,7 @@ script:
   - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
   # Run the tests, ensuring the path is set correctly.
   - source devel/setup.bash
-  - catkin_make run_tests irona && catkin_test_results
+  - catkin_make run_tests_irona && catkin_test_results
   #- rostest irona launchtest.launch
 
 after_success:
