--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,7 @@
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
@@ -55,6 +55,7 @@
   <build_depend>move_base_msgs</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>rostest</build_depend>
+  <!--<build_depend>rosbag</build_depend>-->
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -62,6 +63,7 @@
   <build_export_depend>move_base_msgs</build_export_depend>
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>rostest</build_export_depend>
+  <!--<build_export_depend>rosbag</build_export_depend>-->
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
@@ -69,6 +71,7 @@
   <exec_depend>actionlib</exec_depend>
   <test_depend>rosunit</test_depend>
   <exec_depend>rostest</exec_depend>
+  <!--<exec_depend>rosbag</exec_depend>-->
 
 
   <!-- The export tag contains other, unspecified, tags -->
